<resources>
    <string name="app_name">Musical Structure</string>
    <string name="about">About</string>
    <string name="library">Library</string>
    <string name="Play">Play</string>
    <string name="about_content">This screen contain information about app developer and ways to contact him</string>
    <string name="library_content">This screen shows songs stored in your device.</string>
    <string name="now_playing_content">This screen shows songs that is currenty playing.</string>
    <string name="shuffle">shuffle</string>
    <string name="previous">previous</string>
    <string name="play">Now play</string>
    <string name="next">next</string>
    <string name="replay">replay</string>
    <string name="queue">queue</string>
    <string name="timeZero">00:00</string>
    <string name="backgroundImage">backgroundImage</string>
    <string name="artistImage">artistImage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="noFile">This is a concept app</string>


</resources>
