<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackNew"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:alpha="0.45"
            android:contentDescription="@string/backgroundImage"
            android:scaleType="centerCrop"
            tools:src="@drawable/common_ground" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/list_padding_8dp"
            android:paddingTop="@dimen/list_padding_8dp"
            tools:listitem="@layout/fragment_album" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:paddingBottom="@dimen/padding_8dp"
        android:paddingEnd="@dimen/padding_16dp"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_8dp">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_8dp"
            android:paddingTop="@dimen/padding_8dp"
            android:stretchColumns="1">

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/elapsedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeZero"
                    android:textColor="@color/white" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressBackgroundTintMode="@color/white" />

                <TextView
                    android:id="@+id/remainingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeZero"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/replayIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tableLayout"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginRight="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_toLeftOf="@id/previousIcon"
            android:layout_toStartOf="@id/previousIcon"
            android:contentDescription="@string/replay"
            android:src="@drawable/ic_repeat" />

        <ImageView
            android:id="@+id/previousIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tableLayout"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginRight="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_toLeftOf="@id/playStopIcon"
            android:layout_toStartOf="@id/playStopIcon"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_previous" />

        <ImageView
            android:id="@+id/playStopIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tableLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_8dp"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play" />

        <ImageView
            android:id="@+id/nextIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tableLayout"
            android:layout_marginLeft="@dimen/margin_32dp"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_toEndOf="@id/playStopIcon"
            android:layout_toRightOf="@id/playStopIcon"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_next" />

        <ImageView
            android:id="@+id/shuffleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tableLayout"
            android:layout_marginLeft="@dimen/margin_24dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_toEndOf="@id/nextIcon"
            android:layout_toRightOf="@id/nextIcon"
            android:contentDescription="@string/shuffle"
            android:src="@drawable/ic_shuffle" />
    </RelativeLayout>
</LinearLayout>